--- a/config/database.yml
+++ b/config/database.yml
@@ -17,12 +17,14 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  port: 5432
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
+  host: localhost
   database: blog_app_development
 
   # The specified database role being used to connect to postgres.
@@ -81,5 +83,6 @@ test:
 production:
   <<: *default
   database: blog_app_production
+  host: localhost
   username: blog_app
   password: <%= ENV['BLOG_APP_DATABASE_PASSWORD'] %>
