--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
     "jquery-ujs": "^1.2.3",
+    "node-sass": "^7.0.1",
     "popper.js": "^1.16.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
